# radiance-beta

./: .comfyignore  .gitattributes  .gitignore  .pylintrc  ALBABIT_CHANGES.md  CHANGELOG.md  CLEANUP_REPORT.md  CODE_STYLE.md  CONTRIBUTING.md  KNOWN_ISSUES.md  NODES.md  RADIANCE_v3.1_RELEASE_NOTES.md  README.md  __init__.py  bandit_report.txt  cache.py  color_utils.py  config.py  exceptions.py  fast_vae.py  gpu_memory.py  gpu_utils.py  loader_utils.py  lut_utils.py  nodes_3d.py  nodes_aces2.py  nodes_audio_cut.py  nodes_camera.py  nodes_cdl.py  nodes_character.py  nodes_color.py  nodes_colorscience.py  nodes_curves.py  nodes_denoise.py  nodes_depth.py  nodes_dit_adapter.py  nodes_dna.py  nodes_engine.py  nodes_exr.py  nodes_filmgrain.py  (+60 more)
.github/workflows/: ci.yml  publish.yml
color/: __init__.py  analysis.py  gamut.py  grading.py  luma.py  lut.py  luts.py  matrices.py  ocio_view.py  ops.py  pipeline.py  transfer.py  transform.py
config/: __init__.py  constants.py  dependencies.py  env.py  model_map.py
core/: __init__.py  errors.py  logging.py  param_memory.py
core/system/: __init__.py  path_utils.py  secret_utils.py
core/tensor/: __init__.py  contract.py  convert.py
delivery/: __init__.py  handler.py
docs/: ARCHITECTURE.md  COLOR_SPACE_GUIDE.md  MIGRATION_GUIDE.md  README.md  app.js  architecture.html  changelog.html  concepts.md  coverage.md  developer.md  faq.html  index.html  index.md  installation.html  node_reference.html  nodes.md  quickstart.md  radiance_docs.js  radiance_viewer.html  scripting.html  troubleshooting.md  tutorials.html  wiki.css  workflows.md
docs/built-in-nodes/: ai-assist.md  color.md  generate.md  hdr-aces.md  io-delivery.md  pipeline.md  review.md  splatting.md  upscale.md  vfx.md  video.md
docs/dev/: GAUSSIAN_SPLATTING_PLAN.md  NODES.md  NODE_AUDIT_TABLE.md  PRE_RELEASE_REVIEW.md  REFACTOR_PLAN.md  RELEASE_NOTES_v3.1.0.md  RESTRUCTURE_PLAN.md  radiance_hdr_vae_decode_report.md
docs/site/: app.js  index.html  styles.css
extras/nuke_scripts/: radiance_client.py
film/: __init__.py  camera.py  camera_profiles.py  grain.py
gizmos/: RadianceGizmo_karim.gizmo
gpu/: __init__.py  ops.py
hdr/: __init__.py  analysis.py  color.py  io.py  ocio.py  panorama.py  processing.py  recovery.py  tonemap.py  utils.py  vae.py
image/: __init__.py  defects.py  resolution.py  upscale.py
io/: __init__.py  formats.py
js/: assets_dashboard.html  assets_dashboard.mjs  cinematic_encoder.js  project_manager_dashboard.css  project_manager_dashboard.html  project_manager_dashboard.mjs  radiance_backdrop.js  radiance_bootstrap.js  radiance_exr_workflow.js  radiance_gizmo.js  radiance_io.js  radiance_layout.js  radiance_lite_viewer.js  radiance_loader.js  radiance_mask_editor.js  radiance_menu.js  radiance_neural.js  radiance_pm_launcher.js  radiance_prompt.js  radiance_renderer.js  radiance_resolution.js  radiance_sampler.js  radiance_splat_viewer.js  radiance_studio.js  radiance_style.js  radiance_text.js  radiance_tonemap.js  radiance_upscale.js  radiance_vae_widgets.js  radiance_vfx_multipass.js  radiance_video.js  radiance_viewer.js  radiance_viewer.v1.2.2.backup.js.disabled  radiance_viewer_export.js  radiance_viewer_widgets.js  radiance_webgl.js  radiance_webgl.v1.2.2.backup.js.disabled  radiance_webgpu.js  radiance_workspace.js  strokeRects.txt  (+1 more)
js/docs/: docs.css  docs.js  index.html
model/: __init__.py  cache.py  detect.py  vae.py
nodes/: __init__.py  branding.py  catalog.py  registry.py
nodes/ai/: __init__.py  scene_cut.py
nodes/color/: __init__.py  cdl.py  colorspace.py  curves.py  grade.py  ocio.py  qc.py
nodes/generate/: __init__.py  denoise.py  engine.py  lora.py  prompt.py  regional.py  resolution.py
nodes/hdr/: __init__.py  aces2.py  colorspace.py  delivery.py  encoder.py  inception.py  patch.py  smart.py  synthesis.py  tonemap.py  uplift.py  uplift_universal.py  vae.py
nodes/io/: __init__.py  mask.py
nodes/monitor/: __init__.py  lite_viewer.py  scopes.py  (+1 more)
rpacks/: SDXL_Standard.rpack
scripts/: build_js.js  build_website_docs.py  download_ambient_cg.py  download_hdris.py  radiance_batch_convert.py  resolve_bridge.py  start_nuke_server.py
splatting/: __init__.py  backend.py  cameras.py  colmap.py  data.py  edit.py  init.py  ply.py  splat_format.py  train.py
tests/: __init__.py  _dump_titles.py  benchmark_nodes.py  conftest.py  debug_exr_io.py  debug_exr_z.py  debug_sampler_clamp.py  debug_unified_loader.py  debug_vae_clamp.py  node_keys_snapshot.json  qa_bomb_test.py  qa_read_security_test.py  qa_security_test.py  qa_stress_test.py  run_tests.py  test_aces2.py  test_bridge_security.py  test_cdl.py  test_checkpoint_validation.py  test_clamping.py  test_coherence_prior.py  test_color_math.py  test_color_math_hypothesis.py  test_color_matrices.py  test_color_utils.py  test_colorscience.py  test_colorscience_v3.py  test_comprehensive.py  test_curves.py  test_cv2_float.py  test_dcc_studio.py  test_decode_noise_scale.py  test_denoise_node.py  test_dynamic_range.py  test_dynamic_range_flow.py  test_evaluation_suite.py  test_exr.py  test_exr_absolute_path.py  test_exr_metadata.py  test_exr_multipass_workflow.py  (+68 more)
tmp/: test_paths.py
tools/: build_rudra_cache.py  check_mojibake.py  check_release_ready.py  clean_release.py  compute_descriptor_stats.py  devsecops_cleanup.py  make_validation_contact_sheet.py  nuke_connector.py  restructure_phase1.py  update_icons.py  upgrade_faq.py  upgrade_tutorials.py  validate_hdr_pipeline.py  validate_rudra_dataset.py  validate_splatting_gpu.py
workflows/: FLUX_8k-Upscale.rad  FLUX_Krea_32-HDRI.rad  Image_upscale.rad  Image_upscale.rad.json  LTX.rad  LTX.rad.json  LTX_Basic_I2V.rad  LTX_Basic_I2V.rad.json  LTX_I2V.rad  LTX_I2V.rad.json  LTX_T2I.rad  Splat_Render_Orbit.json  Splat_Train_COLMAP.json  VideoGen.rad  VideoGen.rad.json  Video_Depth_Generator.rad  Video_Upscale.rad  WAN2.2.rad  WAN2.2_I2V.rad  WAN2.2_I2V.rad.json  Z-Image.rad  Z-Image.rad.json  default.rad  radiance.json  shot01_karim_v0002.rad  start.json  test_test_v0002.rad  upscale_video.rad  upscale_video.rad.json
(+52 files in other folders)
