[project]
name = "radiance"
description = "Radiance is a 32-bit color space collection of nodes for ComfyUI."
version = "2.3.2"
license = {file = "LICENSE"} 
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Framework :: ComfyUI"
]

dependencies = ["opencv-python", "imageio", "Pillow", "OpenEXR", "Imath", "opencolorio", "colour-science", "transformers", "scipy", "defusedxml", "imageio-ffmpeg"]

[project.urls]
Repository = "https://github.com/fxtdstudios/radiance"
Documentation = "https://radiance.fxtd.org/index.html"
"Bug Tracker" = "https://radiance.fxtd.org/faq.html"

[tool.comfy]
PublisherId = "fxtdstudios"
DisplayName = "radiance"
Icon = "https://server269.web-hosting.com:2083/cpsess2368827067/viewer/home%2ffxtdhnyt%2fradiance.fxtd.org/r_icon.png"
requires-comfyui = ">=0.2.2"

