[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiance"
description = "Professional VFX, HDR color science, review, and DCC handoff nodes for ComfyUI."
version = "3.1.1"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    { name = "FXTD Studios" },
]
keywords = [
    "comfyui",
    "custom-nodes",
    "vfx",
    "hdr",
    "aces",
    "ocio",
    "openexr",
    "nuke",
    "davinci-resolve",
    "gaussian-splatting",
    "3dgs",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: Apple Metal",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Video",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]

# Runtime deps mirror requirements.txt so registry/pip installs match ComfyUI installs.
# ComfyUI itself provides torch; Radiance validates it at runtime without installing it here.
dependencies = [
    "opencv-python>=4.8.0,<5.0.0",
    "imageio>=2.31.0,<3.0.0",
    "Pillow>=10.0.0,<12.0.0",
    "numpy>=1.22",
    "OpenEXR>=3.2.0,<4.0.0",
    "opencolorio>=2.3.0,<3.0.0",
    "colour-science>=0.4.4,<1.0.0",
    "transformers>=4.36.0,<5.0.0",
    "scipy>=1.10.0,<2.0.0",
    "defusedxml>=0.7.1,<1.0.0",
    "imageio-ffmpeg>=0.4.9",
    "tqdm>=4.66.0",
    "aiohttp>=3.8.0",
    "einops>=0.7.0,<1.0.0",
    "torchsde>=0.2.5,<1.0.0",
]

[project.optional-dependencies]
# Minimal headless CI test environment — no GPU, no ComfyUI, no model weights.
test = [
    "build>=1.2",
    "pytest>=7.4",
    "pytest-timeout>=2.1",
    "pytest-cov>=4.0",
    "numpy>=1.22",
    "scipy>=1.9",
    "Pillow>=9.0",
    "defusedxml>=0.7",
    "opencv-python-headless>=4.7",
    "tqdm>=4.66",
]
# Full production stack (installed in ComfyUI custom_nodes environment)
full = [
    "opencv-python>=4.7",
    "OpenEXR>=3.0",
    "opencolorio>=2.2",
    "colour-science>=0.4",
    "transformers>=4.35",
    "diffusers>=0.25",
    "accelerate>=0.25",
    "peft>=0.7",
    "anthropic>=0.28",
    "openai>=1.0",
    "google-generativeai>=0.5",
]
# Gaussian Splatting render/train. gsplat requires an NVIDIA CUDA toolchain and is
# not installed by default; .ply/.splat IO and COLMAP import work without it.
splatting = [
    "gsplat>=1.0",
    "plyfile>=1.0",
]

[project.urls]
Repository    = "https://github.com/fxtdstudios/radiance"
Documentation = "https://radiance.fxtd.org/index.html"
"Bug Tracker" = "https://github.com/fxtdstudios/radiance/issues"

[tool.comfy]
PublisherId      = "fxtdstudios"
DisplayName      = "Radiance"
Icon             = "https://raw.githubusercontent.com/fxtdstudios/radiance/main/r_icon.png"
requires-comfyui = ">=0.2.2"

[tool.setuptools]
package-dir = { "radiance" = "." }
packages = [
    "radiance",
    "radiance.color",
    "radiance.config",
    "radiance.core",
    "radiance.core.system",
    "radiance.core.tensor",
    "radiance.delivery",
    "radiance.film",
    "radiance.gpu",
    "radiance.hdr",
    "radiance.image",
    "radiance.io",
    "radiance.model",
    "radiance.nodes",
    "radiance.nodes.ai",
    "radiance.nodes.color",
    "radiance.nodes.generate",
    "radiance.nodes.hdr",
    "radiance.nodes.io",
    "radiance.nodes.monitor",
    "radiance.nodes.pipeline",
    "radiance.nodes.splatting",
    "radiance.nodes.training",
    "radiance.nodes.upscale",
    "radiance.nodes.vfx",
    "radiance.nodes.vfx.multipass",
    "radiance.nodes.video",
    "radiance.splatting",
    "radiance.tools",
]
include-package-data = true

[tool.setuptools.package-data]
radiance = [
    "RADIANCE.png",
    "r_icon.png",
    "viewer.png",
    "Viewer_shortcut.png",
    "radiance_workspace.png",
    "basic_workflow.png",
    "ACES/*.ocio",
    "js/*.js",
    "js/*.css",
    "js/*.html",
    "js/*.mjs",
    "workflows/*.json",
    "workflows/*.rad",
    "workflows/*/*.json",
    "workflows/*/*.rad",
]

# ─────────────────────────────────────────────────────────────────────────────
# pytest
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths      = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Per-test timeout — guards against infinite loops in node code (CI & local)
timeout = 30

# Registered markers (suppresses PytestUnknownMarkWarning)
markers = [
    "slow: marks tests as slow — skip in fast CI with `-m 'not slow'`",
    "gpu: marks tests that require a real CUDA device",
    "integration: marks end-to-end tests that need ComfyUI or model weights",
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage (pytest-cov)
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["radiance"]
omit     = [
    "*/tests/*",
    "*/conftest.py",
    "*/dataset_hdr_lora.py",
    "*/train_hdr_lora.py",
]
branch   = true

[tool.coverage.report]
show_missing = true
skip_covered = false
# Raise fail_under once a coverage baseline is established (e.g. 60)
fail_under   = 40
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
